# drstackvis

./: CMakeLists.txt  License.md  README.md  TODO.md  a.out  memtrace.foo-hard.out.03210.0000.json  memtrace.foo-hard.out.04261.0000.json  stackvis.c  writeup-gdoc.tex
cmake/: DrStackVisConfig.cmake.in  DrStackVisConfigVersion.cmake.in
examples/: foo.asm  memtrace.foo.out.05094.0000.json
include/annotations/: stackvis_annotations.c  stackvis_annotations.h
stackvis-dynamorio/: CMakeLists.txt  dr2json.py  stackvis.c  utils.c
stackvis-dynamorio/cmake/: DrStackvisConfig.cmake
stackvis-examples/: drstackvis.foo-hard.out.01761.0000.json  drstackvis.foo.out.01862.0000.json  foo-hard.c  memtrace.foo-hard.out.04261.0000.json  memtrace.foo.out.05094.0000.json
stackvis-termbox/: stackvis  stackvis.go
stackvis-tests/: data.out  drstackvis.data.out.01321.0000.json  drstackvis.data.out.32039.0000.json  drstackvis.push.out.01343.0000.json  drstackvis.push.out.32058.0000.json  drstackvis.stack.out.01361.0000.json  drstackvis.stack.out.02894.0000.json  drstackvis.stack.out.32075.0000.json  drstackvis.trap.out.01399.0000.json  drstackvis.trap.out.02831.0000.json  drstackvis.trap.out.06878.0000.json  drstackvis.trap.out.32100.0000.json  push.asm  stack-overflow.out  stack.asm  stack.out  trap.out
stackvis-tests/c/annotations/: CMakeLists.txt  annotation-app.c  annotation-app.out  drstackvis.annotation-app.out.09231.0000.json
stackvis-tests/c/nostdlib/annotations/: CMakeLists.txt  a.out  annotation-app.cpp  annotation-app.out  drstackvis.annotation-app.out.04548.0000.json
(+60 files in other folders)
