cmake_minimum_required(VERSION 3.0)
find_package(DynamoRIO)
find_package(DrStackVis)

set (CMAKE_CXX_FLAGS "-std=c++0x -nostartfiles -static")
set (SOURCES annotation-app.cpp)
use_DrStackVis_annotations (annotation-app.out SOURCES)
include_directories(${DynamoRIO_INCLUDE_DIRS})
include_directories(${DrStackVis_INCLUDE_DIRS})
add_executable(annotation-app.out ${SOURCES})
